--- a/templates/base.html
+++ b/templates/base.html
@@ -135,7 +135,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="navbar-link" data-nav-link style="color: #ffffff; text-decoration: none; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; padding: 10px 15px; transition: all 0.2s ease; font-size: 0.9rem;">
+            <a href="{% url 'contact-us'%}" class="navbar-link" data-nav-link style="color: #ffffff; text-decoration: none; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; padding: 10px 15px; transition: all 0.2s ease; font-size: 0.9rem;">
               contact us
             </a>
           </li>
