--- a/templates/index.html
+++ b/templates/index.html
@@ -161,7 +161,7 @@
             </li>
 
             <li>
-              <a href="#contact" class="navbar-link" data-nav-link>contact us</a>
+              <a href="{% url 'contact-us'%}" class="navbar-link" data-nav-link>contact us</a>
             </li>
 
           </ul>
