--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
 
         </a>
 
-        <a href="#" class="logo">
+        <a href="{% url 'index'%}" class="logo">
           <img src="{% static 'assets/images/logo.svg'%}" alt="Tourly logo">
         </a>
 
@@ -128,7 +128,7 @@
 
           <div class="navbar-top">
 
-            <a href="#" class="logo">
+            <a href="{% url 'index'%}" class="logo">
               <img src="{% static 'assets/images/logo-blue.svg'%}" alt="Tourly logo">
             </a>
 
@@ -141,7 +141,7 @@
           <ul class="navbar-list">
 
             <li>
-              <a href="#home" class="navbar-link" data-nav-link>home</a>
+              <a href="{% url 'index'%}" class="navbar-link" data-nav-link>home</a>
             </li>
 
             <li>
@@ -149,15 +149,15 @@
             </li>
 
             <li>
-              <a href="#destination" class="navbar-link" data-nav-link>destination</a>
+              <a href="#" class="navbar-link" data-nav-link>destination</a>
             </li>
 
             <li>
-              <a href="#package" class="navbar-link" data-nav-link>packages</a>
+              <a href="#" class="navbar-link" data-nav-link>packages</a>
             </li>
 
             <li>
-              <a href="#gallery" class="navbar-link" data-nav-link>gallery</a>
+              <a href="#" class="navbar-link" data-nav-link>gallery</a>
             </li>
 
             <li>
