--- a/templates/index.html
+++ b/templates/index.html
@@ -168,7 +168,12 @@
 
         </nav>
 
-       <button  class="btn btn-primary">Book Now</button>
+       {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
+        {% else %}
+            <a href="#" class="btn btn-primary">Book Now</a>
+        {% endif %}
+
 
       </div>
     </div>
